Clean code by using SonarQube