@@ -14,7 +14,6 @@ import org.springframework.stereotype.Service;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class CommentService {
@@ -33,22 +32,19 @@ public class CommentService {
         List<CommentResponse> dtos = comments
                 .stream()
                 .map(comment -> modelMapper.map(comment, CommentResponse.class))
-                .collect(Collectors.toList());
+                .toList();
         return dtos;
     }
 
     public void addComment(CommentRequest commentRequest) {
         Restaurant restaurant = restaurantRepository.getReferenceById(commentRequest.getRestaurantId());
-        if (restaurant != null) {
-            Comment comment = modelMapper.map(commentRequest, Comment.class);
-            comment.setCreatedAt(Instant.now());
-            comment.setRestaurant(restaurant);
-            commentRepository.save(comment);
-        }
+        Comment comment = modelMapper.map(commentRequest, Comment.class);
+        comment.setCreatedAt(Instant.now());
+        comment.setRestaurant(restaurant);
+        commentRepository.save(comment);
     }
 
-    public void deleteComment(UUID commentId){
+    public void deleteComment(UUID commentId) {
         commentRepository.deleteById(commentId);
-        System.out.println("Delete successful");
     }
 }
